fix footer layout issue when scrolling to credits

--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -27,6 +27,7 @@
   }
   &__arrow {
     width: 40%;
+    max-height: 150px;
   }
   &__infos-container {
     color: black;
